--- a/leshan/aqi-server/src/main/resources/webapp/index.html
+++ b/leshan/aqi-server/src/main/resources/webapp/index.html
@@ -41,7 +41,9 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- <a class="navbar-brand" href="#">Project name</a> -->
-                <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Leshan" title="Leshan"></a>    
+                <a class="navbar-brand" href="#"><img src="img/Nordic_Semi_Logo.png" alt="Nordic Semiconductor" title="Nordic Semiconductor"></a>
+                <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Leshan" title="Leshan"></a>
+                <a class="navbar-brand" href="#"><img src="img/ntnu-logo.png" alt="NTNU" title="NTNU"></a>
             </div>  
 
             <div class="navbar-collapse collapse">
