removed read on registration

--- a/leshan/aqi-server/src/main/resources/webapp/index.html
+++ b/leshan/aqi-server/src/main/resources/webapp/index.html
@@ -2,7 +2,7 @@
 <html lang="en" ng-app="leshanApp">
 <head>
     <meta charset="utf-8">
-    <title>Leshan Server Demo</title>
+    <title>AQI Server E2114</title>
 
     <link rel="stylesheet" href="vendor/css/bootstrap.min.css">
     <link rel="stylesheet" href="css/lw-app.css" />
@@ -41,8 +41,8 @@
                     <span class="icon-bar"></span>
                 </button>
                 <!-- <a class="navbar-brand" href="#">Project name</a> -->
-                <a class="navbar-brand" href="#"><img src="img/Nordic_Semi_Logo.png" alt="Nordic Semiconductor" title="Nordic Semiconductor"></a>
                 <a class="navbar-brand" href="#"><img src="img/logo.png" alt="Leshan" title="Leshan"></a>
+                <a class="navbar-brand" href="#"><img src="img/nordic-logo.png" alt="Nordic Semiconductor" title="Nordic Semiconductor"></a>
                 <a class="navbar-brand" href="#"><img src="img/ntnu-logo.png" alt="NTNU" title="NTNU"></a>
             </div>  
 
@@ -64,7 +64,7 @@
         <p class="text-muted text-center"><small>
         Powered by: <a href="http://eclipse.org/leshan">Lightweight M2M Leshan Project</a>
         - <a href="https://github.com/eclipse/leshan/issues/">Report a bug</a>
-        - Version : <a href="https://github.com/eclipse/leshan/tree/@commit-id@">@version@</a>
+        - Version : <a href="https://github.com/eclipse/leshan/tree/@commit-id@">2.0.0</a>
         </small></p>
       </div>
     </div>
